# video-search-and-summarization

./: CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/skill-eval/: README.md
.github/skill-eval/adapters/vss-generate-video-calibration/: generate.py
.github/skill-eval/adapters/vss-manage-alerts/: generate.py
.github/skill-eval/adapters/vss-summarize-video/: generate.py
.github/skill-eval/envs/: brev_env.py
.github/workflows/: ci.yml  license-diff.yml
.openclaw/: README.md
assets/: vss_nemoclaw_policy.yaml
deploy/docker/developer-profiles/dev-profile-alerts/: .env
deploy/docker/developer-profiles/dev-profile-base/: .env
deploy/docker/developer-profiles/dev-profile-lvs/: .env
deploy/docker/developer-profiles/dev-profile-search/: .env
deploy/docker/developer-profiles/dev-profile-search/vss-agent/configs/: config.yml
deploy/docker/industry-profiles/warehouse-operations/: .env
deploy/docker/scripts/: deploy_nemoclaw_vss.ipynb  deploy_vss_launchable.ipynb  dev-profile.sh
deploy/docker/scripts/nemoclaw/: README.md  init_nemoclaw.sh  update_openclaw_config.py
deploy/docker/services/analytics/video-analytics-api/: compose.yml
deploy/docker/services/auto-calibration/ms/: compose.yml
deploy/docker/services/auto-calibration/ui/: compose.yml
deploy/docker/services/infra/Dockerfiles/: elasticsearch-gpu.Dockerfile
deploy/docker/services/infra/redis/configs/: redis.conf
deploy/docker/services/infra/sdrc/: docker-compose.yaml
deploy/docker/services/nim/cosmos-reason2-8b/: compose.yml  hw-DGX-SPARK-shared.env  hw-DGX-SPARK.env  hw-H100-shared.env  hw-L40S.env  hw-RTXPRO6000BW.env
deploy/docker/services/rtvi/rtvi-vlm/: rtvi-vlm-docker-compose.yml
deploy/docker/services/ui/: compose.yml
deploy/docker/services/video-summarization/: .env  compose.yml
deploy/docker/services/vios/configs/: nginx-vst-direct.conf
deploy/docker/services/vios/sdr/streamprocessing/: docker-compose.yaml
deploy/helm/developer-profiles/dev-profile-alerts/: values.yaml
deploy/helm/developer-profiles/dev-profile-base/: README.md  values.yaml
deploy/helm/developer-profiles/dev-profile-lvs/: README.md  values.yaml
deploy/helm/developer-profiles/dev-profile-search/: Chart.yaml  values.yaml
deploy/helm/developer-profiles/dev-profile-search/templates/: sdrc-configmap.yaml
deploy/helm/services/nims/: values.yaml
deploy/helm/services/ui/: values.yaml
deploy/helm/services/video-summarization/: values.yaml
services/agent/: pyproject.toml
services/agent/src/vss_agents/api/: video_delete.py
services/agent/src/vss_agents/orchestrator/: docker_compose_util.py
services/agent/src/vss_agents/tools/: attribute_search.py  rtvi_vlm_alert.py  search.py
services/agent/tests/unit_test/orchestrator/: test_docker_compose_util.py
services/agent/tests/unit_test/tools/: test_attribute_search_inner.py
services/analytics/video-analytics-api/test/: package-lock.json  package.json
services/rtvi/rt-cv/: README.md
services/rtvi/rt-cv/configs/warehouse-2d/: ds-detector-labels.txt  ds-kafka-config.txt  ds-main-config.txt  ds-nvdcf-accuracy-tracker-config.yml  ds-ppl-analytics-pgie-config.yml  ds-redis-config.txt
services/rtvi/rt-cv/configs/warehouse-3d/: calibration.json  config.yaml  ds-kafka-config.txt  ds-main-config.txt  ds-mtmc-preprocess-config.txt  ds-mtmc-preprocess-ocr-config.txt  ds-mtmc-videotemplate_custom_lib_config.txt
services/rtvi/rt-cv/docker/: aarch64.Dockerfile  sbsa.Dockerfile  x86.Dockerfile
services/rtvi/rt-cv/src/: Makefile  metropolis_perception_app.c  metropolis_perception_app.h  perception_utc.c
services/rtvi/rt-cv/tests/: run-sanity.sh
services/rtvi/rt-cv/tests/configs/: source-30-config.txt  source_nvmultiurisrcbin_kafka.compose.txt
services/rtvi/rt-cv/tests/docker-compose/: .env  .env.example  compose.yaml
services/rtvi/rt-cv/tests/test-scripts/: add-stream-test.sh  deploy.sh  health-test.sh  kafka-messages-test.sh  remove-stream-test.sh  run-all-tests.sh
skills/vss-deploy-detection-tracking-2d/references/: deploy-vss-detection-tracking-2d.md
skills/vss-deploy-profile/: SKILL.md
skills/vss-deploy-profile/references/: agent-failure-modes.md  alerts.md  edge.md  lvs.md  search.md  warehouse-debug.md  warehouse.md
skills/vss-generate-video-calibration/eval/: auto-calibration.json
skills/vss-generate-video-calibration/references/: deploy-auto-calibration-service.md
skills/vss-generate-video-report/: SKILL.md
skills/vss-generate-video-report/eval/: base_profile_report.json
skills/vss-manage-alerts/: SKILL.md
skills/vss-manage-alerts/eval/: routing_vlm_e_boundary.json  slack_lifecycle.json
skills/vss-manage-alerts/references/: alert-notify.md
skills/vss-manage-alerts/scripts/alert-notify/: .env.example  open_claw_dashboard_notifier.py  slack_notifier.py
skills/vss-search-archive/: SKILL.md
skills/vss-search-archive/eval/: search.json
skills/vss-summarize-video/: SKILL.md
skills/vss-summarize-video/evals/: lvs_api_ops.json  lvs_profile_summarize.json
skills/vss-summarize-video/references/: deploy-lvs-service.md  hitl-prompts.md  lvs-environment-variables.md  lvs.env.example  video-summarization-environment-variables.md
src/: config.py
tools/sdg-postprocessing/: 3rdParty_Licenses.md  README.md  requirements.txt
tools/sdg-postprocessing/data_conversion/: convert_depth_rgb_to_h5_restarable.sh  convert_ground_truth.py  convert_images_to_videos_no_bframes.sh  convert_npy_to_png_depthmap.py  convert_single_camera_rgb_depth_to_h5.py
tools/sdg-postprocessing/data_sanity_check/: dataset_sanity_check_bbox_direction.py  dataset_sanity_check_calibration.py  dataset_sanity_check_instance_id_json.py  dataset_sanity_check_instance_id_png.py  dataset_sanity_check_json.py  dataset_sanity_check_npy.py  dataset_sanity_check_png.py  dataset_sanity_check_rgb.py  dataset_sanity_check_velocity.py  dataset_sanity_check_videos.sh
tools/sdg-postprocessing/semantic_labeling/: box_check.py  remove_label.py
tools/sdg-postprocessing/utils/: export_xform_semantics.py
(+31 files in other folders)
